rabbitmq/dist/k8s/k8s_rabbitmq_process_ingress_def.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-process-ingress
  namespace: k8-test-data
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /rmqprocapi/?(.*)
        backend:
          serviceName: rabbitmq-process-svc
          servicePort: 5006
